--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ ACCESS_TOKEN_SECRET=miSuperClave123
 
 # MySQL
 DB_HOST=srv1250.hstgr.io
-DB_USER=u522428285_admin
-DB_PASSWORD=Minecon$2710
-DB_NAME=u522428285_ordenar
+DB_USER=u522428285_test
+DB_PASSWORD=Revolution505$
+DB_NAME=u522428285_testOrdenar
